# AHBVC-Drone-OPS

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: dji_pilot_to_cloud.py  dji_situation_awareness.py
apps/api/app/api/dependencies/: auth.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: auth.py  dashboard.py  dji.py  equipment.py  fleet.py  livestream.py  map.py  mqtt.py  operations.py  reports.py  shares.py  system.py  users.py
apps/api/app/cli/: __init__.py  create_admin.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/db/: session.py
apps/api/app/health/: __init__.py  router.py
apps/api/app/services/: dji_mqtt.py  dji_telemetry.py  email.py  invitations.py  object_storage.py  pdf_reports.py
apps/api/app/templates/: mission_report.html  user_invitation.html
apps/api/tests/: test_auth_security.py  test_dji_device_binding.py  test_dji_mqtt.py  test_dji_pilot_config.py  test_dji_pilot_to_cloud.py  test_dji_situation_awareness.py  test_health.py  test_invitations.py  test_operations.py  test_reports.py
apps/mobile/: README.md
docs/: architecture.md  authentication.md  brand-transition.md  dji-pilot2-setup.md  missions-design.md  phases.md  reports-and-email.md  saas-foundation.md  stream-sharing-design.md
scripts/: README.md  apply-equipment-migration.sh  apply-operations-migration.sh  apply-stream-share-migration.sh  render-emqx-mqtt-users.sh
(+23 files in other folders)
