[project]
name = "uas-platform-api"
version = "0.1.0"
description = "FastAPI backend for AHBVC UAS Platform."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "redis>=5.0.8",
  "python-jose[cryptography]>=3.3.0",
  "pwdlib[argon2]>=0.3.0",
  "structlog>=24.4.0",
  "httpx>=0.27.0",
  "paho-mqtt>=2.1.0",
  "email-validator>=2.2.0",
  "aiosmtplib>=3.0.2",
  "boto3>=1.35.0",
  "jinja2>=3.1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.7"
]

[tool.ruff]
line-length = 100
target-version = "py312"
